--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-
+  <div id="bg"></div>
   <body>
     <header>
       <h1>Random Quotes</h1>
@@ -21,5 +21,6 @@
       </div>
     </div>
     <script src="js/script.js"></script>
+
   </body>
 </html>
