--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <div id="bg"></div>
   <body>
     <header>
       <h1>Random Quotes</h1>
@@ -17,7 +16,7 @@
     <div class="container">
       <div id="quote-box" class="quote-box">
         <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span><span class="shirt">Red</span></p>
       </div>
     </div>
     <script src="js/script.js"></script>
